now can build entire VPC with remote state

--- a/terraform_remote_s3bucket/Makefile
+++ b/terraform_remote_s3bucket/Makefile
@@ -1,14 +1,23 @@
+all: apply
+
+TF_FILES=$(wildcard *.tf)
+TF_VAR_ARGS ?=
+
+.terraform: $(TF_FILES)
+	terraform get --update
+	for i in $$(ls .terraform/modules/*/Makefile); do i=$$(dirname $$i); echo "Trying make in $$i"; make -C $$i; done
 
 terraform.tfplan: plan
 
-plan: 
-	terraform plan -out terraform.tfplan
+plan: .terraform
+	terraform plan -out terraform.tfplan $(TF_VAR_ARGS)
 
 apply: terraform.tfplan
-	terraform apply 
+	terraform apply terraform.tfplan
 
 
 destroy:
-	terraform plan -destroy -out terraform.tfplan
-	terraform destroy 
+	terraform plan -destroy -out terraform.tfplan $(TF_VAR_ARGS)
+	terraform destroy
 
+#TODO: Use a single interface to clean
