--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,12 +1,12 @@
 
 all: plan apply
 
+# Most of our other work is in us-west-1 or us-east-1. Let's explicitly
+# set a differnet region
+export AWS_DEFAULT_REGION = us-west-2
 export TF_VAR_key_name = testingdeploy
-export TF_VAR_key_dir = ~/.keys
-
-
+export TF_VAR_key_dir = $(shell pwd).keys
 export TF_VAR_FILE ?=$(shell pwd)/terraform.tfvars
-
 
 # If there is a terraform.tfvars
 # use that as terraform input
@@ -39,4 +39,3 @@ destroy:
 	terraform destroy $(TF_VAR_ARGS)
 
 test: apply
-	
