Don't automatically build terraform

--- a/modules/keys/Makefile
+++ b/modules/keys/Makefile
@@ -4,7 +4,7 @@ KEY_DIR ?= $(TF_VAR_key_dir)
 
 
 
-keys: $(TF_VAR_key_dir)/$(KEY_NAME).pub
+keys: $(KEY_DIR)/$(KEY_NAME).pub
 
 $(KEY_DIR)/$(KEY_NAME).pem:
 	mkdir -p $(KEY_DIR)
