fixing up how we handle key creation

--- a/modules/peering/tests/Makefile
+++ b/modules/peering/tests/Makefile
@@ -2,12 +2,14 @@ PHONY:
 
 all: plan apply
 
-# Most of our other work is in us-west-1 or us-east-1. Let's explicitly
-# set a differnet region
-export AWS_DEFAULT_REGION = us-west-2
-export TF_VAR_key_name = testingdeploy
-export TF_VAR_key_dir = $(shell pwd)/.keys
+
+export TF_VAR_aws_region = $(AWS_DEFAULT_REGION)
+
+
+TF_VAR_key_name ?= testingdeploy
+export TF_VAR_key_dir ?= $(shell pwd)/.keys
 export TF_VAR_FILE ?=$(shell pwd)/terraform.tfvars
+export TF_VAR_key_name
 
 # If there is a terraform.tfvars
 # use that as terraform input
@@ -17,10 +19,16 @@ ifneq ($(wildcard $(TF_VAR_FILE)),)
 TF_VAR_ARGS=--var-file=$(TF_VAR_FILE)
 endif
 
+
+
 TF_FILES=$(wildcard *.tf)
+
+# Make any submodules.  These submodules might need
+# to pull variables from somewhere, or create keys
 .terraform: $(TF_FILES)
 	terraform get --update
 	for i in $$(ls .terraform/modules/*/Makefile); do i=$$(dirname $$i); echo "Trying make in $$i"; make -C $$i; done
+
 
 plan: $(TF_FILES) .terraform
 	terraform plan -out terraform.tfplan $(TF_VAR_ARGS)
